[ci skip] fix plot 83a2f33fc2620c083550431e082695e53a637111

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39da1230",
+   "id": "d3e66499",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2476982f",
+   "id": "fff7ab0f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c63f03",
+   "id": "d3ac20a9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0799282",
+   "id": "669995fd",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22a431b",
+   "id": "35cb5c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4976427",
+   "id": "0796364c",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271ce535",
+   "id": "60ec3bf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106fcdb2",
+   "id": "82b69b92",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326f2f0e",
+   "id": "3b2d0dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69e8091",
+   "id": "8bca896a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4b4eb8",
+   "id": "dfd06a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3f49a4e",
+   "id": "a21bf87e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80a0150c",
+   "id": "1657bab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1874e77f",
+   "id": "12f8bb69",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5206f4cc",
+   "id": "a1022b8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1291649",
+   "id": "0c0b5a51",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b8eeca",
+   "id": "0329ed49",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3766393",
+   "id": "c7ffd1eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4453c827",
+   "id": "fe7175dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eeb4c85",
+   "id": "d1ff785f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb88fb9",
+   "id": "ea369f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175b3b9b",
+   "id": "9e0738d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49284619",
+   "id": "7e54d0c3",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d42031",
+   "id": "83a4880b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee872d8e",
+   "id": "367eaaa3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f11aa86",
+   "id": "73431227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8dcaa44",
+   "id": "e3c33871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e20781c",
+   "id": "b336fc11",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6cb217",
+   "id": "7bdb592b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9ad1bf",
+   "id": "21622e9e",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2241e94",
+   "id": "a1678358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6932ecde",
+   "id": "4b23dafc",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6da22f",
+   "id": "3f2d0f26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cd88100",
+   "id": "fb0a2a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7817d1",
+   "id": "5352169e",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e48e75",
+   "id": "3707caf7",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a188674e",
+   "id": "b973e91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce38a346",
+   "id": "86203a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,11 +679,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "925492dc",
+   "id": "88620d84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizons = range(1, 3)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ba0d83",
+   "id": "5a1aa225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81de7403",
+   "id": "51ae7562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65baa08f",
+   "id": "174afe33",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa902b5",
+   "id": "e518386e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effaafa1",
+   "id": "222e1d67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1bad770",
+   "id": "aac649e2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71552ff",
+   "id": "2984ab46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e8d8f3",
+   "id": "b6c4e34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407b7a6f",
+   "id": "6ff4bd6d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ff5199",
+   "id": "c9e7af87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a37034",
+   "id": "dae788b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5510b32",
+   "id": "58fe4a37",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03df3dab",
+   "id": "9098d337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5ada0e",
+   "id": "c1838790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ce0054",
+   "id": "2b61c346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cbb566a",
+   "id": "694c9c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae4247e9",
+   "id": "f1598168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d4a6911",
+   "id": "39619826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,43 +1066,97 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614772a6",
+   "id": "bf9c464a",
    "metadata": {},
    "outputs": [],
    "source": [
     "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
-    "]\n",
-    "\n",
-    "altair.Chart(\n",
-    "    pl.concat(\n",
-    "        [\n",
-    "            targets.skb.eval(),\n",
-    "            predictions.rename(\n",
-    "                {\n",
-    "                    target_name: predicted_name\n",
-    "                    for target_name, predicted_name in zip(\n",
-    "                        target_column_names, predicted_target_column_names\n",
-    "                    )\n",
-    "                }\n",
-    "            ).skb.eval(),\n",
-    "        ],\n",
-    "        how=\"horizontal\",\n",
-    "    ).tail(24 * 7)\n",
-    ").transform_fold(\n",
-    "    [\"load_mw\"] + predicted_target_column_names,\n",
-    ").mark_line(\n",
-    "    tooltip=True\n",
-    ").encode(\n",
-    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
-    ").interactive()"
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0d1c57",
+   "id": "18f69ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = pl.concat(\n",
+    "    [\n",
+    "        targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.eval(),\n",
+    "        predictions.rename(\n",
+    "            {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    "        ).skb.eval(),\n",
+    "    ],\n",
+    "    how=\"horizontal\",\n",
+    ").tail(24 * 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b771234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "\n",
+    "def plot_horizon(output, prediction_time, past_true_values=5):\n",
+    "    # Find the row that contains the forecasted values\n",
+    "    row = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[0]\n",
+    "    # Build the forecast dataframe by concatenating the different horizons\n",
+    "    forecast = pl.DataFrame(\n",
+    "        {\n",
+    "            \"forecast_time\": row[0] + datetime.timedelta(hours=h),\n",
+    "            \"forecast_value\": predicted_value,\n",
+    "        }\n",
+    "        for h, predicted_value in enumerate(row[2:], start=1)\n",
+    "    )\n",
+    "    # Get the past true values and also the future true values of to the last horizon\n",
+    "    true_values = output.filter(\n",
+    "        (\n",
+    "            pl.col(\"prediction_time\")\n",
+    "            >= prediction_time - datetime.timedelta(hours=past_true_values)\n",
+    "        )\n",
+    "        & (\n",
+    "            pl.col(\"prediction_time\")\n",
+    "            <= prediction_time + datetime.timedelta(hours=len(row) - 2)\n",
+    "        )\n",
+    "    )\n",
+    "    # plot the true and forecasted values\n",
+    "    true_values_chart = (\n",
+    "        altair.Chart(true_values)\n",
+    "        .transform_fold([\"load_mw\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"prediction_time:T\", y=\"load_mw:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    forecast_chart = (\n",
+    "        altair.Chart(forecast)\n",
+    "        .transform_fold([\"forecast_value\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"forecast_time:T\", y=\"forecast_value:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    return (true_values_chart + forecast_chart).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4972f3b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_to_plot = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7879b697",
    "metadata": {},
    "outputs": [],
    "source": []
