--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd9ddcfc",
+   "id": "2c72c897",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16865bd8",
+   "id": "7b74bead",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad5c3d8",
+   "id": "f736c1bc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61f7378",
+   "id": "c881f5c4",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1444754a",
+   "id": "7e6a3b4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6c36b8",
+   "id": "b3618d68",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a30085",
+   "id": "8d3a462d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed151c7a",
+   "id": "3e1299c6",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42725124",
+   "id": "fa40e27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f4624d1",
+   "id": "c20493b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433bd124",
+   "id": "52b92ace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62abde2",
+   "id": "51de0a4c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb04df1",
+   "id": "79e47a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97487ee4",
+   "id": "cebcfa21",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62a4a49",
+   "id": "929004bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3eb0f50",
+   "id": "6bc55599",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "661d2609",
+   "id": "dc62809c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3bc9db",
+   "id": "ac8a7bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd54b77c",
+   "id": "a60ffcee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b13be7f",
+   "id": "6766b185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ac1c5c",
+   "id": "a048e173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5672975a",
+   "id": "7054b1ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70297566",
+   "id": "ffd07947",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4800a248",
+   "id": "9b31bb0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0220795",
+   "id": "177613b5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5fddde1",
+   "id": "e84872e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d230dfb",
+   "id": "ad17a783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0be50d",
+   "id": "bccae292",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dfe6b73",
+   "id": "90894c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1637b0b5",
+   "id": "19aa343c",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d39934",
+   "id": "345694bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f43f9d",
+   "id": "c7b6d79b",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838db7fb",
+   "id": "18c6d63b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30c8d864",
+   "id": "974393d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c062b8c",
+   "id": "81f30989",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd0a18f",
+   "id": "57a97b8b",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212494bc",
+   "id": "a081ac66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db0f67ce",
+   "id": "96bc1878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,11 +679,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08d10df",
+   "id": "1dd8453c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizons = range(1, 3)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a47db6f",
+   "id": "dcef3ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3254096",
+   "id": "ba523f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4eec18b",
+   "id": "941ec975",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920f7e31",
+   "id": "f583140d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf75e0b2",
+   "id": "47455652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2aff34",
+   "id": "53bfd03c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dce04d4",
+   "id": "a6f4af98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d097983",
+   "id": "cc862c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50057900",
+   "id": "b6d209e6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a1bca9",
+   "id": "301492a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "166e58a6",
+   "id": "414a67b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9dcb55d",
+   "id": "ef0115fd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c94ebc7",
+   "id": "e51ec9ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a51085",
+   "id": "4c3359ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a81236c",
+   "id": "ce18fd67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c3dc52",
+   "id": "85c05404",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d3c523",
+   "id": "4e385fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46347a80",
+   "id": "bad02025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,43 +1066,97 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2187e60",
+   "id": "cca71891",
    "metadata": {},
    "outputs": [],
    "source": [
     "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
-    "]\n",
-    "\n",
-    "altair.Chart(\n",
-    "    pl.concat(\n",
-    "        [\n",
-    "            targets.skb.eval(),\n",
-    "            predictions.rename(\n",
-    "                {\n",
-    "                    target_name: predicted_name\n",
-    "                    for target_name, predicted_name in zip(\n",
-    "                        target_column_names, predicted_target_column_names\n",
-    "                    )\n",
-    "                }\n",
-    "            ).skb.eval(),\n",
-    "        ],\n",
-    "        how=\"horizontal\",\n",
-    "    ).tail(24 * 7)\n",
-    ").transform_fold(\n",
-    "    [\"load_mw\"] + predicted_target_column_names,\n",
-    ").mark_line(\n",
-    "    tooltip=True\n",
-    ").encode(\n",
-    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
-    ").interactive()"
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fb55c7",
+   "id": "1ea7bc20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = pl.concat(\n",
+    "    [\n",
+    "        targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.eval(),\n",
+    "        predictions.rename(\n",
+    "            {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    "        ).skb.eval(),\n",
+    "    ],\n",
+    "    how=\"horizontal\",\n",
+    ").tail(24 * 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae4b739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "\n",
+    "def plot_horizon(output, prediction_time, past_true_values=5):\n",
+    "    # Find the row that contains the forecasted values\n",
+    "    row = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[0]\n",
+    "    # Build the forecast dataframe by concatenating the different horizons\n",
+    "    forecast = pl.DataFrame(\n",
+    "        {\n",
+    "            \"forecast_time\": row[0] + datetime.timedelta(hours=h),\n",
+    "            \"forecast_value\": predicted_value,\n",
+    "        }\n",
+    "        for h, predicted_value in enumerate(row[2:], start=1)\n",
+    "    )\n",
+    "    # Get the past true values and also the future true values of to the last horizon\n",
+    "    true_values = output.filter(\n",
+    "        (\n",
+    "            pl.col(\"prediction_time\")\n",
+    "            >= prediction_time - datetime.timedelta(hours=past_true_values)\n",
+    "        )\n",
+    "        & (\n",
+    "            pl.col(\"prediction_time\")\n",
+    "            <= prediction_time + datetime.timedelta(hours=len(row) - 2)\n",
+    "        )\n",
+    "    )\n",
+    "    # plot the true and forecasted values\n",
+    "    true_values_chart = (\n",
+    "        altair.Chart(true_values)\n",
+    "        .transform_fold([\"load_mw\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"prediction_time:T\", y=\"load_mw:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    forecast_chart = (\n",
+    "        altair.Chart(forecast)\n",
+    "        .transform_fold([\"forecast_value\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"forecast_time:T\", y=\"forecast_value:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    return (true_values_chart + forecast_chart).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e778250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_to_plot = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "572f2a45",
    "metadata": {},
    "outputs": [],
    "source": []
